log
Thu 16 May 2024 09:08:35 PM UTC: 
 tests:  0|5
total_score: 0/70
8fc8320
Thu 16 May 2024 09:13:58 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
330b9b8
Thu 16 May 2024 09:15:19 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
c12bee8
Thu 16 May 2024 09:16:14 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
9ad5954
Thu 16 May 2024 09:22:37 PM UTC: 
 sudoku.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:11: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |   int i,j,k;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
16b76bd
Thu 16 May 2024 09:22:47 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
7cf27f4
Thu 16 May 2024 09:25:30 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
0e82fb0
Thu 16 May 2024 09:30:47 PM UTC: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
83e9a9a
Thu 16 May 2024 09:37:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
1074141
Thu 16 May 2024 09:37:49 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
aa78bea
Thu 16 May 2024 09:42:16 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
954ed00
Thu 16 May 2024 09:43:43 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
7f64e37
Thu 16 May 2024 09:51:08 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
dca4bd4
Thu 16 May 2024 09:52:45 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
7429c50
Thu 16 May 2024 09:54:06 PM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
81ac4df
Thu 16 May 2024 10:01:57 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  10|0
total_score: 70/70
8ad7626
Thu 16 May 2024 10:03:20 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|0
total_score: 70/70
a69bd08
Thu 16 May 2024 10:05:01 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
adcffca
Thu 16 May 2024 10:06:09 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:151:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  151 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
5daad11
